@@ -39,6 +39,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   split supports a new --hex-suffixes[=from] option to create files with
   lower case hexadecimal suffixes, similar to the --numeric-suffixes option.
 
+** Improvements
+
+  mv --verbose now distinguishes rename and copy operations.
+
 
 * Noteworthy changes in release 8.27 (2017-03-08) [stable]
 
